change file name credentials

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -32,5 +32,5 @@ spec:
             mountPath: /var/secrets/google
           env:
           - name: GOOGLE_APPLICATION_CREDENTIALS
-            value: /var/secrets/google/key.json
+            value: /var/secrets/google/ms-sender-pubsub-credentials.json
 status: {}
